fix layout issues